# magic_static

./: Cargo.toml  README.md
magic_static/: Cargo.toml
magic_static/src/: lib.rs  private.rs
magic_static_macro/: Cargo.toml
magic_static_macro/src/: lib.rs
test/: Cargo.toml
test/src/: main.rs
