[package]
name = "magic_static"
version = "3.0.3"
edition = "2021"
description = "Global singletons initialized at program start, an alternative to lazy initialization"
license = "MIT"
authors = ["William Venner <william@venner.io>"]
repository = "https://github.com/WilliamVenner/magic_static"
keywords = ["lazy-static", "static", "singleton", "global", "globals"]
categories = ["no-std", "rust-patterns", "memory-management"]
documentation = "https://docs.rs/magic_static"
readme = "../README.md"

[features]
bare-metal = []

[dependencies]
magic_static_macro = { path = "../magic_static_macro", version = "3.0.1" }