[package]
name = "magic_static_macro"
version = "1.2.0"
edition = "2021"
description = "Proc macro for magic_static"
license = "MIT"
authors = ["William Venner <william@venner.io>"]
repository = "https://github.com/WilliamVenner/magic_static"

[lib]
proc-macro = true
doctest = false

[dependencies]
syn = { version = "1", features = ["full"] }
quote = "1"